--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.9.2",
     "react": "^16.12.0",
     "react-datepicker": "^2.13.0",
     "react-dom": "^16.12.0",
@@ -19,7 +23,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "backend": "cd ./backend/ && npm start"
+    "backend": "cd ./backend/ && node server.js"
   },
   "eslintConfig": {
     "extends": "react-app"
