--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "backend": "cd ./backend/ && node server.js"
+    "backend": "cd ./backend/ && node server.js -p 5000"
   },
   "eslintConfig": {
     "extends": "react-app"
